fixed button alignment issues

--- a/style/style.css
+++ b/style/style.css
@@ -105,10 +105,10 @@ button:focus {
 #pauseBtn {
 	display:none;
 	position: fixed;
-	margin-bottom: 10px;
+	margin-bottom: 7px;
 	width:72px;
-	height:72px;
-	margin-right: 15px;
+	`height:72px;
+	margin-right: 11px;
 	z-index: 3000;
 	color:#232323;
 	cursor:pointer;
@@ -120,10 +120,10 @@ button:focus {
 #restartBtn {
 	display:none;
 	position: fixed;
-	margin-bottom: 10px;
+	margin-bottom: 7px;
 	width:72px;
 	height:72px;
-	margin-left: 15px;
+	margin-left: 11px;
 	z-index: 3000;
 	color:#232323;
 	cursor:pointer;
